--- a/Source/TreasureGuide.Web/App/widgets/miniUnit/view.html
+++ b/Source/TreasureGuide.Web/App/widgets/miniUnit/view.html
@@ -1,33 +1,7 @@
-﻿<div class="thumbnail">
-    <div class="caption">
-        <h4 data-bind="text: Name"></h4>
-        <table>
-            <tbody>
-                <tr>
-                    <th>
-                        Type:
-                    </th>
-                    <td>
-                        <span data-bind="text: Type"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        Class 1:
-                    </th>
-                    <td>
-                        <span data-bind="text: Class1"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        Class 2:
-                    </th>
-                    <td>
-                        <span data-bind="text: Class2"></span>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+﻿<div data-bind="css: 'unit-display unit-display-' + Size()">
+        <img class="unit-portrait" data-bind="attr: { src: BackgroundImage, alt: Name }" />
+    <div class="unit-details">
+        <div data-bind="css: 'unit-detail unit-class-' + Class2(), visible: Class2"></div>
+        <div data-bind="css: 'unit-detail unit-class-' + Class1(), visible: Class1"></div>
     </div>
 </div>
