--- a/Source/TreasureGuide.Web/App/widgets/teamBuilder/view.html
+++ b/Source/TreasureGuide.Web/App/widgets/teamBuilder/view.html
@@ -1,6 +1,6 @@
 ﻿<section>
     <!-- ko foreach: Units -->
-    <div data-bind="widget: { kind: 'miniUnit', id: Id }"></div>
+    <div data-bind="widget: { kind: 'miniUnit', id: Id, size: 'md' }"></div>
     <!-- /ko -->
     <button class="btn btn-primary" data-bind="click: addUnit"><i class="fa fa-fw fa-plus"></i> Add Unit</button>
 </section>
