--- a/Source/TreasureGuide.Web/src/custom-elements/team-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-display.html
@@ -1,17 +1,20 @@
 ﻿<template>
-    <div class="row center-align">
-        <unit-display unit-id.bind="teamSlots[0]" editable.bind="editable"></unit-display>
-        <unit-display unit-id.bind="teamSlots[1]" editable.bind="editable"></unit-display>
+    <div class="team-display">
+        <div class="row center-align">
+            <unit-display unit-id.bind="teamSlots[0]" editable.bind="editable"></unit-display>
+            <unit-display unit-id.bind="teamSlots[1]" editable.bind="editable"></unit-display>
+        </div>
+        <div class="row center-align">
+            <unit-display unit-id.bind="teamSlots[2]" editable.bind="editable"></unit-display>
+            <unit-display unit-id.bind="teamSlots[3]" editable.bind="editable"></unit-display>
+        </div>
+        <div class="row center-align">
+            <unit-display unit-id.bind="teamSlots[4]" editable.bind="editable"></unit-display>
+            <unit-display unit-id.bind="teamSlots[5]" editable.bind="editable"></unit-display>
+        </div>
     </div>
-    <div class="row center-align">
-        <unit-display unit-id.bind="teamSlots[2]" editable.bind="editable"></unit-display>
-        <unit-display unit-id.bind="teamSlots[3]" editable.bind="editable"></unit-display>
-    </div>
-    <div class="row center-align">
-        <unit-display unit-id.bind="teamSlots[4]" editable.bind="editable"></unit-display>
-        <unit-display unit-id.bind="teamSlots[5]" editable.bind="editable"></unit-display>
-    </div>
-    <div class="row center-align" if.bind="editable">
+    <div class="center-align" if.bind="editable">
+        <div class="row"></div>
         <button md-button md-waves click.delegate="openImport()">
             <i class="material-icons left">input</i>
             Import from OPTC-DB
