Team importing now fully functional!

--- a/Source/TreasureGuide.Web/src/custom-elements/team-import.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-import.html
@@ -8,7 +8,7 @@
             <form>
                 <div class="row">
                     <p>
-                        Import your team from <strong><a href="http://optc-db.github.io/damage/#/" target="_blank">optc-db</a></strong>!
+                        Import your team from <a href="http://optc-db.github.io/damage/#/" target="_blank">optc-db</a>!
                         Simply click the green "Export URL" button at the bottom of the page and paste the code into this form.
                     </p>
                 </div>
