Switching to aurelia dialog.

--- a/Source/TreasureGuide.Web/src/custom-elements/team-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-display.html
@@ -1,4 +1,7 @@
 ﻿<template>
     <unit-display repeat.for="unit of teamSlots" unit-id.bind="unit" editable.bind="editable"></unit-display>
-    <team-import if.bind="editable" accepted.two-way="import"></team-import>
+    <button if.bind="editable" md-button md-waves click.delegate="openImport()">
+        <i class="material-icons left">input</i>
+        Import from OPTC-DB
+    </button>
 </template>
