--- a/Source/TreasureGuide.Web/src/custom-elements/team-import.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-import.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="row center">
-                    <team-display team.bind="import"></team-display>
+                    <team-display team.bind="team" ship.bind="ship"></team-display>
                 </div>
             </form>
         </ux-dialog-body>
