--- a/Source/TreasureGuide.Web/src/custom-elements/team-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-display.html
@@ -1,6 +1,6 @@
 ﻿<template>
     <unit-display repeat.for="unit of teamSlots" unit-id.bind="unit" editable.bind="editable"></unit-display>
-    Ship: ${ship}
+    <ship-display ship-id.bind="ship" editable.bind="editable"></ship-display>
     <button if.bind="editable" md-button md-waves click.delegate="openImport()">
         <i class="material-icons left">input</i>
         Import from OPTC-DB
