--- a/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
@@ -40,7 +40,7 @@
             <div class="row center" if.bind="units.length > 0">
                 <p>${((searchModel.page - 1) * searchModel.pageSize) +1} - ${((searchModel.page - 1) * searchModel.pageSize) + units.length} of ${resultCount}</p>
                 <div class="unit-collection">
-                    <button repeat.for="unit of units" class="grey unit-button" md-button="large: true" md-waves click.delegate="unitClicked(unit)">
+                    <button repeat.for="unit of units" class="grey unit-button" md-button="large: true" md-waves click.delegate="clicked(unit)">
                         <img src.bind="getIcon(unit.id)">
                     </button>
                 </div>
