--- a/Source/TreasureGuide.Web/src/custom-elements/ship-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/ship-display.html
@@ -1,5 +1,5 @@
 ﻿<template>
-    <button class="orange" md-button="large: true" md-waves click.delegate="clicked()">
+    <button class="orange" md-button md-waves click.delegate="clicked()">
         <i class="material-icons left">directions_boat</i>
         ${ship.name}
     </button>
