--- a/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
@@ -1,2 +1,45 @@
 ﻿<template>
+    <ux-dialog>
+        <ux-dialog-header>
+            <div class="right">
+                <a click.delegate="cancel()" md-button="flat: true;" class="modal-action">X</a>
+            </div>
+            <h3>Select a Stage</h3>
+        </ux-dialog-header>
+        <ux-dialog-body>
+            <div class="row">
+                <form with.bind="searchModel">
+                    <div class="col m4">
+                        <md-input md-label="Term" md-type="text" md-value.two-way="term"></md-input>
+                    </div>
+                    <div class="col m4">
+                        <md-checkbox md-checked.two-way="global">Global</md-checkbox>
+                    </div>
+                    <div class="col m4">
+                        <md-input md-label="Type" md-type="number" md-value.two-way="type"></md-input>
+                    </div>
+                </form>
+            </div>
+            <div class="row center" if.bind="pages > 1">
+                <md-pagination md-pages.bind="pages" md-active-page.bind="searchModel.page" md-on-page-changed.delegate="onPageChanged($event)"></md-pagination>
+            </div>
+            <div class="row center" if.bind="stages.length > 0">
+                <p>${((searchModel.page - 1) * searchModel.pageSize) +1} - ${((searchModel.page - 1) * searchModel.pageSize) + stages.length} of ${resultCount}</p>
+                <div class="stage-collection">
+                    <div class="col md-6" repeat.for="stage of stages">
+                        <button class="grey stage-button" md-button="large: true" md-waves click.delegate="clicked(stage)">
+                            <i class="material-icons">turned_in</i>
+                        </button>
+                        ${stage.name}
+                    </div>
+                </div>
+            </div>
+            <div class="row center" if.bind="!stages || stages.length == 0">
+                <h3>Search yielded no results!</h3>
+            </div>
+        </ux-dialog-body>
+        <ux-dialog-footer>
+            <a click.delegate="cancel()" md-button="flat: true;" md-waves="color: accent;" class="modal-action">Cancel</a>
+        </ux-dialog-footer>
+    </ux-dialog>
 </template>
