--- a/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
@@ -23,11 +23,15 @@
             <div class="row center" if.bind="pages > 1">
                 <md-pagination md-pages.bind="pages" md-active-page.bind="searchModel.page" md-on-page-changed.delegate="onPageChanged($event)"></md-pagination>
             </div>
-            <div class="row" if.bind="stages.length > 0">
-                <div class="center">
+            <div class="row">
+                <div class="center" if.bind="stages.length > 0">
                     <p>${((searchModel.page - 1) * searchModel.pageSize) +1} - ${((searchModel.page - 1) * searchModel.pageSize) + stages.length} of ${resultCount}</p>
                 </div>
                 <div class="collection">
+                    <a href click.delegate="clicked(0)" class="${'collection-item ' + (!stageId ? 'active' : '')}">
+                        <i class="circle material-icons primary-text left">turned_in_not</i>
+                        <span class="title">Any</span>
+                    </a>
                     <a href repeat.for="stage of stages" click.delegate="clicked(stage)" class="${'collection-item ' + (stageId === stage.id ? 'active' : '')}">
                         <i class="circle material-icons primary-text left">turned_in</i>
                         <span class="title">${stage.name}</span>
