--- a/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
@@ -28,11 +28,11 @@
                     <p>${((searchModel.page - 1) * searchModel.pageSize) +1} - ${((searchModel.page - 1) * searchModel.pageSize) + stages.length} of ${resultCount}</p>
                 </div>
                 <div class="collection">
-                    <a href click.delegate="clicked(0)" class="${'collection-item ' + (!stageId ? 'active' : '')}">
+                    <a href click.delegate="clicked(null)" class="${'collection-item ' + (!stageId ? 'active' : '')}">
                         <i class="circle material-icons primary-text left">turned_in_not</i>
                         <span class="title">Any</span>
                     </a>
-                    <a href repeat.for="stage of stages" click.delegate="clicked(stage)" class="${'collection-item ' + (stageId === stage.id ? 'active' : '')}">
+                    <a href repeat.for="stage of stages" click.delegate="clicked(stage.id)" class="${'collection-item ' + (stageId === stage.id ? 'active' : '')}">
                         <i class="circle material-icons primary-text left">turned_in</i>
                         <span class="title">${stage.name}</span>
                     </a>
