--- a/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
@@ -37,10 +37,15 @@
             <div class="row center" if.bind="pages > 1">
                 <md-pagination md-pages.bind="pages" md-active-page.bind="searchModel.page" md-on-page-changed.delegate="onPageChanged($event)"></md-pagination>
             </div>
-            <div class="row center" if.bind="units.length > 0">
-                <p>${((searchModel.page - 1) * searchModel.pageSize) +1} - ${((searchModel.page - 1) * searchModel.pageSize) + units.length} of ${resultCount}</p>
+            <div class="row center">
+                <div if.bind="units.length > 0">
+                    <p>${((searchModel.page - 1) * searchModel.pageSize) +1} - ${((searchModel.page - 1) * searchModel.pageSize) + units.length} of ${resultCount}</p>
+                </div>
                 <div class="unit-collection">
-                    <button repeat.for="unit of units" class="grey unit-button" md-button="large: true" md-waves click.delegate="clicked(unit)">
+                    <button class="grey unit-button" md-button="large: true" md-waves click.delegate="clicked(null)">
+                        <i class="material-icons">person_outline</i>
+                    </button>
+                    <button repeat.for="unit of units" class="grey unit-button" md-button="large: true" md-waves click.delegate="clicked(unit.id)">
                         <img src.bind="getIcon(unit.id)">
                     </button>
                 </div>
