Team stage displays.

--- a/Source/TreasureGuide.Web/src/custom-elements/ship-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/ship-display.html
@@ -1,6 +1,10 @@
 ﻿<template>
-    <button class="orange" md-button md-waves click.delegate="clicked()">
+    <button if.bind="editable" class="orange" md-button md-waves click.delegate="clicked()">
         <i class="material-icons left">directions_boat</i>
         ${ship.name}
     </button>
+    <span if.bind="!editable">
+        <i class="material-icons left">directions_boat</i>
+        ${ship.name}
+    </span>
 </template>
