--- a/Source/TreasureGuide.Web/src/custom-elements/stage-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-display.html
@@ -1,6 +1,10 @@
 ﻿<template>
-    <button class="secondary" md-button="large: true" md-waves click.delegate="clicked()">
+    <button if.bind="editable" md-button="large: true" md-waves click.delegate="clicked()">
         <i class="material-icons left">${stageId ? 'turned_in' : 'turned_in_not'}</i>
+        ${stageId ? stage.name : 'Select Stage'}
     </button>
-    ${stage.name || "Stage"}
+    <span if.bind="!editable">
+        <i class="material-icons left">${stage ? 'turned_in' : 'turned_in_not'}</i>
+        ${stageId ? stage.name : 'Any Stage'}
+    </span>
 </template>
