Going back to MVC login.

--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -12,7 +12,7 @@
                         </a>
                     </li>
                     <li if.bind="!accountService.isLoggedIn">
-                        <a route-href="route: login">
+                        <a href="/Account/Login">
                             Login
                         </a>
                     </li>
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li if.bind="!accountService.isLoggedIn">
-                        <a route-href="route: login">
+                        <a href="/Account/Login">
                             Login
                         </a>
                     </li>
